--- a/détailsVéhicules.html
+++ b/détailsVéhicules.html
@@ -35,10 +35,10 @@
                   title="Accéder directement au contenu principal de cette page">Passer le
                   menu</a></p>
               <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
-                <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
-                <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+                <li class="nav-item"><a class="nav-link" href="/index.html">ACCUEIL</a></li>
+                <li class="nav-item"><a class="nav-link" href="/vente.html">VENTE</a></li>
+                <li class="nav-item"><a class="nav-link" href="/location.html">LOCATION</a></li>
+                <li class="nav-item"><a class="nav-link" href="/contact.html">CONTACT</a></li>
               </ul>
             </nav>
           </div>
@@ -48,7 +48,7 @@
           CLUB AUTO
         </h1>
         <div class="d-none d-sm-flex row col-sm align-self-center p-0 pt-sm-4 m-0 lh-sm">
-          <img src="/ImgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
+          <img src="imgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
             style="height: 2.5em; width:auto">
           <span class="col-auto p-0 text-white m-0">
             <span class="text-secondary fw-bold">ADRESSE :</span><br>
@@ -57,7 +57,7 @@
           </span>
         </div>
         <div class="text-white row col-sm align-self-center pb-5 pb-sm-0 pt-sm-4 m-0 lh-1 p-0 ms-3">
-          <img src="ImgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
+          <img src="imgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
             style="height: 2.5em; width:auto">
           <span class="col-auto fw-bold">
             <span class="text-secondary fw-bold">T&Eacute;L&Eacute;PHONE :</span><br>
@@ -106,7 +106,7 @@
         <span class="text-muted fs-5">ACCUEIL / VENTE / BMW 535I, NAVI, LEATHER, ABS</span>
         <hr class="mb-5">
         <h1 class="fw-bold mb-4 fs-1">BMW 535i, Navi, Leather, ABS</h1>
-        <img src="/ImgGlobal/vehicule2.jpg" alt="Véhicule Vente" style="max-width: 100%;height:auto">
+        <img src="imgGlobal/vehicule2.jpg" alt="Véhicule Vente" style="max-width: 100%;height:auto">
       </div>
       <div class="col-10 offset-sm-1 my-5 bg-dark px-1 col-sm-7">
         <div class="bg-white fw-bold text-center py-4  border-top border-5 border-secondary"
@@ -206,7 +206,7 @@
             <input type="text" class="form-control rounded-0" placeholder="Entrez votre Email"
               aria-label="Entrez votre Email" aria-describedby="button-addon2">
             <button class="btn p-0 m-0 border-0" type="button" id="button-addon2"><img
-                src="/LogoGlobal/connexion-sans-fil.png" alt="logo de connexion" style="height: 3em;"></button>
+                src="logoGlobal/connexion-sans-fil.png" alt="logo de connexion" style="height: 3em;"></button>
           </div>
           <label for="Email" class="text-white-50 pb-3 ca-text-footer">Inscrivez-vous pour recevoir les
             dernières
