--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                                     title="Accéder directement au contenu principal de cette page">Passer le
                                     menu</a></p>
                             <ul class="navbar-nav ms-auto">
-                                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
-                                <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
-                                <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/index.html">ACCUEIL</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/vente.html">VENTE</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/location.html">LOCATION</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/contact.html">CONTACT</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -46,7 +46,7 @@
                 <h1 class="d-none d-sm-flex text-white fs-2 fw-bold col-sm align-self-center p-0 ps-sm-6 pt-sm-4 m-0">
                     CLUB AUTO</h1>
                 <div class="d-none d-sm-flex row col-sm align-self-center p-0 pt-sm-4 m-0 lh-sm">
-                    <img src="/ImgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
+                    <img src="imgHeader/icone-adresse.png" alt="icone d'adresse" class="col-auto pe-0"
                         style="height: 2.5em; width:auto">
                     <span class="col-auto p-0 text-white m-0">
                         <span class="text-secondary fw-bold">ADRESSE :</span><br>
@@ -55,7 +55,7 @@
                     </span>
                 </div>
                 <div class="text-white row col-sm align-self-center pt-sm-4 m-0 lh-1">
-                    <img src="ImgHeader/icon-telephone.png" alt="logo telephone" class="offset-1 col-auto pe-0"
+                    <img src="imgHeader/icon-telephone.png" alt="logo telephone" class="offset-1 col-auto pe-0"
                         style="height: 2.5em; width:auto">
                     <span class="col-auto fw-bold">
                         <span class="text-secondary fw-bold">T&Eacute;L&Eacute;PHONE :</span><br>
@@ -101,7 +101,7 @@
     <main id="pageContent">
         <section class="row">
             <div class="bg-dark">
-                <img class="d-none d-sm-flex" src="/imgHeader/vehicule1.jpg" alt="img d'en-tête"
+                <img class="d-none d-sm-flex" src="imgHeader/vehicule1.jpg" alt="img d'en-tête"
                     style="width: 100%;height: auto">
                 <h1 class="clubAuto fs-2 fw-bold text-white py-5 px-3 col-10 offset-1 col-sm-12">CLUB AUTO <span
                         class="text-secondary">LE
@@ -111,7 +111,7 @@
             <article>
                 <div class="row col-10 offset-1 pt-sm-5 mt-sm-5">
                     <span class="col-10 offset-1 m-lg-0 col-lg-6 pt-5 pt-sm-0 pb-3">
-                        <img src="/ImgGlobal/clients.jpg" alt="image de client" style="max-width: 100%;height:auto">
+                        <img src="imgGlobal/clients.jpg" alt="image de client" style="max-width: 100%;height:auto">
                     </span>
                     <span class="col-lg-6">
                         <h1 class="col-10 offset-1 gy-3 fw-bold h2">BIENVENUE CHEZ <span class="text-secondary">CLUB
@@ -149,7 +149,7 @@
                         <!--Fin de la deuxième ligne d'article-->
                     </span>
                     <span class="col-10 offset-1 offset-lg-0 gy-3 col-lg-6 pb-5 pt-5 pt-sm-0">
-                        <img src="/ImgGlobal/entretien.jpg" alt="entretien" style="max-width: 100%;height:auto">
+                        <img src="imgGlobal/entretien.jpg" alt="entretien" style="max-width: 100%;height:auto">
                     </span>
                 </div>
             </article>
@@ -185,10 +185,10 @@
                 <hr class="border border-secondary border-2 opacity-100 col-10 offset-1">
                 <div class="row offset-1 col-10">
                     <span class="col-sm pb-5 d-sm-block">
-                        <img src="/ImgGlobal/vehicule2.jpg" alt="Image de voiture" class="col-12 mb-3 mt-4">
+                        <img src="imgGlobal/vehicule2.jpg" alt="Image de voiture" class="col-12 mb-3 mt-4">
                         <div class="text-bg-dark px-4 pb-2 pt-4">
                             <span class="row">
-                                <a href="/clubAutoPageDetails.html" class="col-8 col-sm"><span
+                                <a href="clubAutoPageDetails.html" class="col-8 col-sm"><span
                                         class="offset-2 offset-sm-0 btn btn-primary my-3 m-sm-0 px-4 rounded-0 text-white fw-bold fs-4">5
                                         500 €</span></a>
                                 <p class="fs-4 text-white fw-bold col-sm order-sm-first py-2">BMW 535I, NAVI, LEATHER,
@@ -199,10 +199,10 @@
                         </div>
                     </span>
                     <span class="col-sm d-none d-sm-block">
-                        <img src="/ImgGlobal/vehicule2.jpg" alt="Image de voiture" class="col-12 mb-3 mt-4">
+                        <img src="imgGlobal/vehicule2.jpg" alt="Image de voiture" class="col-12 mb-3 mt-4">
                         <div class="text-bg-dark px-4 pt-4 pb-2">
                             <span class="row">
-                                <a href="/clubAutoPageDetails.html" class="col"><span
+                                <a href="détailsVéhicules.html" class="col"><span
                                         class="btn btn-primary rounded-0 fs-4 fw-bold py-2 px-4 text-white">8 000
                                         €</span></a>
                                 <p class="fs-4 text-white fw-bold col order-sm-first pb-3">BMW 328I, SPORT LINE BODY KIT
@@ -212,10 +212,10 @@
                         </div>
                     </span>
                     <span class="col-sm d-none d-lg-block">
-                        <img src="/ImgGlobal/vehicule2.jpg" alt="Image de voiture" class="col-12 mb-3 mt-4">
+                        <img src="imgGlobal/vehicule2.jpg" alt="Image de voiture" class="col-12 mb-3 mt-4">
                         <div class="text-bg-dark px-4 pt-4 pb-2">
                             <span class="row">
-                                <a href="/clubAutoPageDetails.html" class="col">
+                                <a href="détailsVéhicules.html" class="col">
                                     <span class="btn btn-primary rounded-0 fs-4 fw-bold py-1 px-4 text-white">
                                         <ul style="list-style-type: none;padding:0;margin:0">
                                             <li
@@ -241,7 +241,7 @@
             </div>
             <div class="row px-5 pt-5">
                 <div class="row  col-sm-6 col-lg pb-3 pt-5">
-                    <img src="/LogoGlobal/icon1.png" alt="Financement" style="height: 5em; width: auto;"
+                    <img src="logoGlobal/icon1.png" alt="Financement" style="height: 5em; width: auto;"
                         class="col-4 ps-0">
                     <span class="col-8">
                         <h2 class="fw-bold fs-5 px-3">FINANCEMENT</h2>
@@ -254,7 +254,7 @@
                     </span>
                 </div>
                 <div class="row col-sm-6 col-lg pb-3 pt-5">
-                    <img src="/LogoGlobal/icon2.png" alt="Réactivité" style="height: 5em;  width: auto;"
+                    <img src="logoGlobal/icon2.png" alt="Réactivité" style="height: 5em;  width: auto;"
                         class="col-4 ps-0">
                     <span class="col-8">
                         <h2 class="fw-bold fs-5 px-4">RÉACTIVITÉ DE L'ÉQUIPE TECHNIQUE</h2>
@@ -267,7 +267,7 @@
                     </span>
                 </div>
                 <div class="row col-sm-6 col-lg pb-3 pt-5">
-                    <img src="/LogoGlobal/icon3.png" alt="Ecoute" style="height: 5em;  width: auto;" class="col-4 ps-0">
+                    <img src="logoGlobal/icon3.png" alt="Ecoute" style="height: 5em;  width: auto;" class="col-4 ps-0">
                     <span class="col-8">
                         <h2 class="fw-bold fs-5">A L'ÉCOUTE DE NOTRE CLIENTÈLE</h2>
                         <p class="fw-bold text-black-50">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum
@@ -278,7 +278,7 @@
                     </span>
                 </div>
                 <div class="row col-sm-6 col-lg pt-5">
-                    <img src="/LogoGlobal/icon4.png" alt="Service et maintenance" style="height: 5em;  width: auto;"
+                    <img src="logoGlobal/icon4.png" alt="Service et maintenance" style="height: 5em;  width: auto;"
                         class="col-4">
                     <span class="col-8">
                         <h2 class="fw-bold fs-5 px-4 ">SERVICE &amp; MAINTENANCE</h2>
@@ -292,7 +292,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center py-6 pb-sm-6">
-                <button type="button" class="btn btn-primary py-3 px-5"><a href="contact.html"
+                <button type="button" class="btn btn-primary py-3 px-5"><a href="/contact.html"
                         class="text-white text-decoration-none fw-bold fs-5">CONTACTEZ-NOUS</a></button>
             </div>
             <span id="vehicule3" class="py-6 px-0">
@@ -333,7 +333,7 @@
                         <input type="text" class="form-control rounded-0" placeholder="Entrez votre Email"
                             aria-label="Entrez votre Email" aria-describedby="button-addon2">
                         <button class="btn p-0 m-0 border-0" type="button" id="button-addon2"><img
-                                src="/LogoGlobal/connexion-sans-fil.png" alt="logo de connexion"
+                                src="logoGlobal/connexion-sans-fil.png" alt="logo de connexion"
                                 style="height: 3em;"></button>
                     </div>
                     <label for="Email" class="text-white-50 pb-3 ca-text-footer">Inscrivez-vous pour recevoir les
