--- a/location.html
+++ b/location.html
@@ -33,10 +33,10 @@
                                     title="Accéder directement au contenu principal de cette page">Passer le
                                     menu</a></p>
                             <ul class="navbar-nav ms-auto">
-                                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
-                                <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
-                                <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/index.html">ACCUEIL</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/vente.html">VENTE</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/location.html">LOCATION</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/contact.html">CONTACT</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -46,7 +46,7 @@
                     CLUB AUTO
                 </h1>
                 <div class="d-none d-sm-flex row col-sm align-self-center p-0 pt-sm-4 m-0 lh-sm">
-                    <img src="/ImgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
+                    <img src="imgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
                         style="height: 2.5em; width:auto">
                     <span class="col-auto p-0 text-white m-0">
                         <span class="text-secondary fw-bold">ADRESSE :</span><br>
@@ -55,7 +55,7 @@
                     </span>
                 </div>
                 <div class="text-white row col-sm align-self-center pb-5 pb-sm-0 pt-sm-4 m-0 lh-1 p-0 ms-3">
-                    <img src="ImgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
+                    <img src="imgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
                         style="height: 2.5em; width:auto">
                     <span class="col-auto fw-bold">
                         <span class="text-secondary fw-bold">T&Eacute;L&Eacute;PHONE :</span><br>
@@ -106,7 +106,7 @@
         <aside class="col-sm-3 order-sm-last aside">
             <div class="shadow row col-10 offset-1 d-sm-block" style="margin-top: -3em">
                 <div class="row bg-dark py-4 px-5 px-sm-2 m-0">
-                    <img src="/LogoGlobal/icone-voiture.png" alt="icône recherche" class="col-auto px-4"
+                    <img src="logoGlobal/icone-voiture.png" alt="icône recherche" class="col-auto px-4"
                         style="height: 2.5em; width:auto">
                     <h1 class="fs-3 col-auto text-white">Rechercher</h1>
                 </div>
@@ -130,7 +130,7 @@
                         <option selected>Anciennet&eacute;</option>
                     </select>
                     <h1 class="fs-5 fw-bold mt-4 p-sm-0">Prix</h1>
-                    <img src="/LogoGlobal/Selecteur.png" alt="selecteur" class="col-12 p-0">
+                    <img src="logoGlobal/Selecteur.png" alt="selecteur" class="col-12 p-0">
                     <span class="mt-3 col-sm-5 py-2 bg-light text-center">
                         2000
                     </span>
@@ -169,7 +169,7 @@
                         eius in tenetur. Hic nostrum suscipit voluptate obcaecati culpa, reiciendis ea cupiditate,
                         repudiandae porro aspernatur quidem minima!</p>
 
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-4">
@@ -185,7 +185,7 @@
                         Cumque
                         tempora voluptatum ut architecto, voluptates alias quo distinctio accusantium ratione reiciendis
                         itaque velit ullam illo illum assumenda.</p>
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-4">
@@ -202,7 +202,7 @@
                         commodi?
                         Ullam nisi animi debitis vel, dicta accusantium similique exercitationem officia ea laboriosam,
                         impedit at ipsam. Blanditiis, totam.</p>
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-3">
@@ -218,16 +218,16 @@
                         Sint
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-5">
             </div>
             <div class="row d-none d-sm-flex">
-                <img src="/ImgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
+                <img src="imgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
                 <span class="col-8">
                     <p class="bg-primary text-white py-2 px-4 mb-2 text-center fs-5 float-end">20€/jour</p>
-                        <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
+                    <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
                     <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
                         velit
                         reprehenderit dignissimos id provident, quasi ipsam fugiat dolorum labore eum non
@@ -236,14 +236,14 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-3">
-                <img src="/ImgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
+                <img src="imgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
                 <span class="col-8">
                     <p class="bg-primary text-white py-2 px-4 mb-2 text-center fs-5 float-end">20€/jour</p>
-                        <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
+                    <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
                     <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
                         velit
                         reprehenderit dignissimos id provident, quasi ipsam fugiat dolorum labore eum non
@@ -252,14 +252,14 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-3">
-                <img src="/ImgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
+                <img src="imgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
                 <span class="col-8">
                     <p class="bg-primary text-white py-2 px-4 mb-2 text-center fs-5 float-end">20€/jour</p>
-                        <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
+                    <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
                     <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
                         velit
                         reprehenderit dignissimos id provident, quasi ipsam fugiat dolorum labore eum non
@@ -268,14 +268,14 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-3">
-                <img src="/ImgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
+                <img src="imgGlobal/vehicule2.jpg" alt="vehicule2" class="col-4">
                 <span class="col-8">
                     <p class="bg-primary text-white py-2 px-4 mb-2 text-center fs-5 float-end">20€/jour</p>
-                        <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
+                    <h1 class="fs-4 fw-bold col-6">BMW 535i, Navi, Leather, ABS</h1>
                     <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
                         velit
                         reprehenderit dignissimos id provident, quasi ipsam fugiat dolorum labore eum non
@@ -284,7 +284,7 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/DétailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-5">
@@ -316,7 +316,7 @@
                         <input type="text" class="form-control rounded-0" placeholder="Entrez votre Email"
                             aria-label="Entrez votre Email" aria-describedby="button-addon2">
                         <button class="btn p-0 m-0 border-0" type="button" id="button-addon2"><img
-                                src="/LogoGlobal/connexion-sans-fil.png" alt="logo de connexion"
+                                src="logoGlobal/connexion-sans-fil.png" alt="logo de connexion"
                                 style="height: 3em;"></button>
                     </div>
                     <label for="Email" class="text-white-50 pb-3 ca-text-footer">Inscrivez-vous pour recevoir les
