--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
                                     title="Accéder directement au contenu principal de cette page">Passer le
                                     menu</a></p>
                             <ul class="navbar-nav ms-auto">
-                                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
-                                <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
-                                <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/index.html">ACCUEIL</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/vente.html">VENTE</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/location.html">LOCATION</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/contact.html">CONTACT</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -46,7 +46,7 @@
                     CLUB AUTO
                 </h1>
                 <div class="d-none d-sm-flex row col-sm align-self-center p-0 pt-sm-4 m-0 lh-sm">
-                    <img src="/ImgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
+                    <img src="imgHeader/icone-adresse.png" alt="Icone d'adresse" class="col-auto pe-0"
                         style="height: 2.5em; width:auto">
                     <span class="col-auto p-0 text-white m-0">
                         <span class="text-secondary fw-bold">ADRESSE :</span><br>
@@ -55,7 +55,7 @@
                     </span>
                 </div>
                 <div class="text-white row col-sm align-self-center pb-5 pb-sm-0 pt-sm-4 m-0 lh-1 p-0 ms-3">
-                    <img src="ImgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
+                    <img src="imgHeader/icon-telephone.png" alt="logo telephone" class="offset-sm-1 col-auto pe-0"
                         style="height: 2.5em; width:auto">
                     <span class="col-auto fw-bold">
                         <span class="text-secondary fw-bold">T&Eacute;L&Eacute;PHONE :</span><br>
@@ -77,8 +77,8 @@
             <div class="d-flex justify-content-end col-10 offset-1" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-black fw-bold py-3 px-4 d-block"
-                            href="/index.html" title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
+                        <a class="nav-link text-black fw-bold py-3 px-4 d-block" href="/index.html"
+                            title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black fw-bold py-3 px-4" href="/vente.html"
@@ -129,7 +129,7 @@
                         <label class="form-label pb-2" for="message">Message</label>
                         <textarea rows="3" class="form-control rounded-0 bg-light pt-2 pb-6 ps-4" name="message"
                             id="message" placeholder="Entrer votre message" aria-describedby="button-addon2"></textarea>
-                        <button type="button" class="btn btn-primary my-4 py-2 px-5"><a href="merci.html"
+                        <button type="button" class="btn btn-primary my-4 py-2 px-5"><a href="/merci.html"
                                 class="text-white text-decoration-none fw-bold fs-5">ENVOYER</a></button>
                     </div>
                 </form>
@@ -160,7 +160,7 @@
                         <input type="text" class="form-control rounded-0" placeholder="Entrez votre Email"
                             aria-label="Entrez votre Email" aria-describedby="button-addon2">
                         <button class="btn p-0 m-0 border-0" type="button" id="button-addon2"><img
-                                src="/LogoGlobal/connexion-sans-fil.png" alt="logo de connexion"
+                                src="logoGlobal/connexion-sans-fil.png" alt="logo de connexion"
                                 style="height: 3em;"></button>
                     </div>
                     <label for="Email" class="text-white-50 pb-3 ca-text-footer">Inscrivez-vous pour recevoir les
