--- a/location.html
+++ b/location.html
@@ -33,10 +33,10 @@
                                     title="Accéder directement au contenu principal de cette page">Passer le
                                     menu</a></p>
                             <ul class="navbar-nav ms-auto">
-                                <li class="nav-item"><a class="nav-link" href="/index.html">ACCUEIL</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/vente.html">VENTE</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/location.html">LOCATION</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/contact.html">CONTACT</a></li>
+                                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
+                                <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
+                                <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -77,19 +77,19 @@
             <div class="d-flex justify-content-end col-10 offset-1" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-black fw-bold py-3 px-4 d-block" href="/index.html"
+                        <a class="nav-link text-black fw-bold py-3 px-4 d-block" href="index.html"
                             title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black fw-bold py-3 px-4" href="/vente.html"
+                        <a class="nav-link text-black fw-bold py-3 px-4" href="vente.html"
                             title="Vers la page de vente du site Club Auto">VENTE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white bg-secondary fw-bold py-3 px-4" href="/location.html"
+                        <a class="nav-link text-white bg-secondary fw-bold py-3 px-4" href="location.html"
                             title="Vers la page de location du site Club Auto">LOCATION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black fw-bold py-3 px-4" href="/contact.html"
+                        <a class="nav-link text-black fw-bold py-3 px-4" href="contact.html"
                             title="Vers la page de contact du site Club Auto">CONTACT</a>
                     </li>
                 </ul>
@@ -169,7 +169,7 @@
                         eius in tenetur. Hic nostrum suscipit voluptate obcaecati culpa, reiciendis ea cupiditate,
                         repudiandae porro aspernatur quidem minima!</p>
 
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-4">
@@ -185,7 +185,7 @@
                         Cumque
                         tempora voluptatum ut architecto, voluptates alias quo distinctio accusantium ratione reiciendis
                         itaque velit ullam illo illum assumenda.</p>
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-4">
@@ -202,7 +202,7 @@
                         commodi?
                         Ullam nisi animi debitis vel, dicta accusantium similique exercitationem officia ea laboriosam,
                         impedit at ipsam. Blanditiis, totam.</p>
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-3">
@@ -218,7 +218,7 @@
                         Sint
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-3" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </div>
                 <hr class="my-4 py-5">
@@ -236,7 +236,7 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-3">
@@ -252,7 +252,7 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-3">
@@ -268,7 +268,7 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-3">
@@ -284,7 +284,7 @@
                         fugiat hic error, tempore et quas officiis eveniet placeat doloribus quibusdam fugit quos
                         quam
                         eaque, ex ducimus!</p>
-                    <h1 class="pb-5"><a href="/détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
+                    <h1 class="pb-5"><a href="détailsVéhicules.html" class="fs-5" style="color:black"> &raquo; En
                             savoir plus &laquo;</a></h1>
                 </span>
                 <hr class="my-4 py-5">
