--- a/merci.html
+++ b/merci.html
@@ -33,10 +33,10 @@
                   title="Accéder directement au contenu principal de cette page">Passer le
                   menu</a></p>
               <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="/index.html">ACCUEIL</a></li>
-                <li class="nav-item"><a class="nav-link" href="/vente.html">VENTE</a></li>
-                <li class="nav-item"><a class="nav-link" href="/location.html">LOCATION</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact.html">CONTACT</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">ACCUEIL</a></li>
+                <li class="nav-item"><a class="nav-link" href="vente.html">VENTE</a></li>
+                <li class="nav-item"><a class="nav-link" href="location.html">LOCATION</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
               </ul>
             </nav>
           </div>
@@ -77,19 +77,19 @@
       <div class="d-flex justify-content-end col-10 offset-1" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-black fw-bold py-3 px-4 d-block" href="/index.html"
+            <a class="nav-link text-black fw-bold py-3 px-4 d-block" href="index.html"
               title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black fw-bold py-3 px-4" href="/vente.html"
+            <a class="nav-link text-black fw-bold py-3 px-4" href="vente.html"
               title="Vers la page de vente du site Club Auto">VENTE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black fw-bold py-3 px-4" href="/location.html"
+            <a class="nav-link text-black fw-bold py-3 px-4" href="location.html"
               title="Vers la page de location du site Club Auto">LOCATION</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white bg-secondary fw-bold py-3 px-4" href="/contact.html"
+            <a class="nav-link text-white bg-secondary fw-bold py-3 px-4" href="contact.html"
               title="Vers la page de contact du site Club Auto">CONTACT</a>
           </li>
         </ul>
